Changes since last Roxen 1.3
-----------------------------------------------
+ Caudium is a Roxen 1.3 fork. We have different goals and
  ideas on what the server need to become successful. We have opted to
  start on version 1.0 to point out that this is a different
  server. Check out our website at http://caudium.net/ for further
  information.
+ We use SourceForge. This means public CVS, bug tracking, task lists
  and more. The URL is http://sourceforge.net/projects/caudium/ 
+ Now works with Pike 7. Not completely tested but at least everything
  seems to compile ok. This also means that quite a number of small
  fixes has been made, since most errors are due to the better (and
  more correct) type checking in the Pike 7 series.
+ Wrote query-string and HTTP header parsers in C. Seems to give a
  nice performance boast.
+ Fixed small bug in htmlparse.pike when using tags that return a
  string directly.
+ Added PiXSL, a glue to Sablotron (XSLT parser) and UltraLog, a log
  parser, to the default distribution.
+ Option to edit the server name removed and added option to hide
  server version. 
+ Pike not isn't built as part of the server, but instead you specify
  which Pike you want to use (or use the default one).
+ Don't send the Last-Modified header for dynamic (RXML-parsed)
  pages. Fixes caching problems with clients that correctly handles
  If-Modified-Since, like MSIE and Galeon.
+ Changed files named roxen to caudium, as well as refences to roxen->
  etc. It should still be compatible however.
+ Demo ssl-certificate fixed for Caudium.
+ Various incompatible changes. See README.compatibility for details.
+ protocols/http.pike use the parse_got David wrote for Roxen 2.1. It
  sort-of-fixes the worst Roxen DOS (send an eternally long header and
  see Roxen die). The second part of the fix is to implement a maximum
  header length.
